--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <time id="dayDate"> <br></time>
     <h1>
         <span id="greeting"></span> 
-        <span id="name" contenteditable="true">Amlan.</span>
+        <span id="name" contenteditable="true">Iypshita Gogoi.</span>
     </h1>
       <h2>Any plan for today? </h2>
       <h2 id="plan" contenteditable="true">Complete this project.</h2>    
